fix disabled styles on IOS

--- a/app/styles/components/c-support-form.scss
+++ b/app/styles/components/c-support-form.scss
@@ -68,6 +68,10 @@
             box-shadow: none;
           }
 
+          &:disabled {
+            opacity: 1; //neccesary on IOS
+          }
+
         }
 
         .select-container {
